Update website with new architecture

--- a/projet/territoire.html
+++ b/projet/territoire.html
@@ -75,41 +75,54 @@
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-              <a href="./historique.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Historique</span>
-              </a>
-              <a href="./demarche.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Démarche</span>
-              </a>
-              <a href="./territoire.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Territoire</span>
-              </a>
-              <a href="./equipe.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Équipe</span>
-              </a>
+              <a href="./historique.html" class="dropdown-item border-radius-md"><span class="ps-3">Historique</span></a>
+              <a href="./demarche.html" class="dropdown-item border-radius-md"><span class="ps-3">Démarche</span></a>
+              <a href="./territoire.html" class="dropdown-item border-radius-md"><span class="ps-3">Territoire</span></a>
+              <a href="./equipe.html" class="dropdown-item border-radius-md"><span class="ps-3">Équipe</span></a>
 
             </div><!-- navbar big - d-lg-block -->
 
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
 
-              <a href="./historique.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Historique</span>
-              </a>
-              <a href="./demarche.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Démarche</span>
-              </a>
-              <a href="./territoire.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Territoire</span>
-              </a>
-              <a href="./equipe.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Équipe</span>
-              </a>
+              <a href="./historique.html" class="dropdown-item border-radius-md"><span class="ps-3">Historique</span></a>
+              <a href="./demarche.html" class="dropdown-item border-radius-md"><span class="ps-3">Démarche</span></a>
+              <a href="./territoire.html" class="dropdown-item border-radius-md"><span class="ps-3">Territoire</span></a>
+              <a href="./equipe.html" class="dropdown-item border-radius-md"><span class="ps-3">Équipe</span></a>
 
             </div><!-- navbar small - d-lg-none -->
 
           </div><!-- dropdown-menu -->
         </li><!-- li Projets -->
+
+        <!-- li Pédagogie -->
+        <li class="nav-item dropdown dropdown-hover mx-2">
+          <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" id="dropdownMenuPages" data-bs-toggle="dropdown" aria-expanded="false">
+            Pédagogie
+            <img src="../assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-1">
+          </a>
+          <div class="dropdown-menu dropdown-menu-animation dropdown-md p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuPages">
+
+            <!-- Navbar big size (full screen) -->
+            <div class="d-none d-lg-block">
+
+              <a href="../pedagogie/notions.html" class="dropdown-item border-radius-md"><span class="ps-3">Notions de base</span></a>
+              <a href="../pedagogie/indicateurs.html" class="dropdown-item border-radius-md"><span class="ps-3">Indicateurs</span></a>              
+              <a href="../pedagogie/acoustiquiz.html" class="dropdown-item border-radius-md"><span class="ps-3">AcoustiQUIZ</span></a>
+
+            </div><!-- navbar big - d-lg-block -->
+
+            <!-- Navbar small size (smartphone, tablet) -->
+            <div class="d-lg-none">
+
+              <a href="../pedagogie/notions.html" class="dropdown-item border-radius-md"><span class="ps-3">Notions de base</span></a>
+              <a href="../pedagogie/indicateurs.html" class="dropdown-item border-radius-md"><span class="ps-3">Indicateurs</span></a>              
+              <a href="../pedagogie/acoustiquiz.html" class="dropdown-item border-radius-md"><span class="ps-3">AcoustiQUIZ</span></a>
+
+            </div><!-- navbar small - d-lg-none -->
+
+          </div><!-- dropdown-menu -->
+        </li><!-- li Pédagogie -->
 
         <!-- li Participer -->
         <li class="nav-item dropdown dropdown-hover mx-2">
@@ -122,30 +135,16 @@
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-              <a href="../participer/habitant.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Vous êtes rezéen.ne</span>
-              </a>
-              <a href="../participer/collectivite.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Vous êtes une collectivité</span>
-              </a>
-               <a href="../participer/acoustiquiz.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">AcoustiQUIZ</span>
-              </a>
+              <a href="../participer/habitant.html" class="dropdown-item border-radius-md"><span class="ps-3">Vous êtes rezéen.ne</span></a>
+              <a href="../participer/collectivite.html" class="dropdown-item border-radius-md"><span class="ps-3">Vous êtes une collectivité</span></a>
 
             </div><!-- navbar big - d-lg-block -->
 
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
 
-              <a href="../participer/habitant.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Vous êtes rezéen.ne</span>
-              </a>
-              <a href="../participer/collectivite.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Vous êtes une collectivité</span>
-              </a>
-              <a href="../participer/acoustiquiz.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">AcoustiQUIZ</span>
-              </a>
+              <a href="../participer/habitant.html" class="dropdown-item border-radius-md"><span class="ps-3">Vous êtes rezéen.ne</span></a>
+              <a href="../participer/collectivite.html" class="dropdown-item border-radius-md"><span class="ps-3">Vous êtes une collectivité</span></a>
 
             </div><!-- navbar small - d-lg-none -->
 
@@ -155,45 +154,41 @@
 
         <!-- li Résultats -->
         <li class="nav-item dropdown dropdown-hover mx-2">
-          <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" href="javascript:;" id="dropdownMenuPages" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link ps-2 d-flex center-content-between cursor-pointer align-items-center" id="dropdownMenuPages" data-bs-toggle="dropdown" aria-expanded="false">
             Résultats
             <img src="../assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-1">
           </a>
           <div class="dropdown-menu dropdown-menu-animation dropdown-md p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuPages">
 
             <!-- Navbar big size (full screen) -->
-            <div class="d-none d-lg-block">
+            <div class="d-none d-lg-block" >
+              <h6>&nbsp; &nbsp; SonoRezé I</h6>
+              <a href="./../resultats/sonoreze_I/discussion.html" class="dropdown-item border-radius-md">Groupes de discussion</a>
+              <a href="./../resultats/sonoreze_I/cartes.html" class="dropdown-item border-radius-md">Cartographies</a>
+              <a href="./../resultats/sonoreze_I/portail_interactif.html" class="dropdown-item border-radius-md">Portail interactif</a>
+              <a href="./../resultats/sonoreze_I/seminaire.html" class="dropdown-item border-radius-md">Séminaire final</a>
 
-              <a href="../resultats/discussion.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Groupes de discussion</span>
-              </a>
-              <a href="../resultats/cartes.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Cartographies</span>
-              </a>
-              <a href="../resultats/portail_interactif.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Portail interactif</span>
-              </a>
-              <a href="../resultats/publications.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Publications</span>
-              </a>
+              <br><h6>&nbsp; &nbsp; SonoRezé II</h6>
+              <a href="./../resultats/sonoreze_II/actions.html" class="dropdown-item border-radius-md">Actions</a>
+              <a href="./../resultats/sonoreze_II/portail_carto.html" class="dropdown-item border-radius-md">Portail cartographique</a>
+
+              <a href="./../resultats/publications.html" class="dropdown-item border-radius-md"><h6>Publications</h6></a>
 
             </div><!-- navbar big - d-lg-block -->
 
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
+              <h6>&nbsp; &nbsp; SonoRezé I</h6>
+              <a href="./../resultats/sonoreze_I/discussion.html" class="dropdown-item border-radius-md">Groupes de discussion</a>
+              <a href="./../resultats/sonoreze_I/cartes.html" class="dropdown-item border-radius-md">Cartographies</a>
+              <a href="./../resultats/sonoreze_I/portail_interactif.html" class="dropdown-item border-radius-md">Portail interactif</a>
+              <a href="./../resultats/sonoreze_I/seminaire.html" class="dropdown-item border-radius-md">Séminaire final</a>
 
-              <a href="../resultats/discussion.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Groupes de discussion</span>
-              </a>
-              <a href="../resultats/cartes.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Cartographies</span>
-              </a>
-              <a href="../resultats/portail_interactif.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Portail interactif</span>
-              </a>
-              <a href="../resultats/publications.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Publications</span>
-              </a>
+              <br><h6>&nbsp; &nbsp; SonoRezé II</h6>
+              <a href="./../resultats/sonoreze_II/actions.html" class="dropdown-item border-radius-md">Actions</a>
+              <a href="./../resultats/sonoreze_II/portail_carto.html" class="dropdown-item border-radius-md">Portail cartographique</a>
+
+              <a href="./../resultats/publications.html" class="dropdown-item border-radius-md"><h6>Publications</h6></a>
 
             </div><!-- navbar small - d-lg-none -->
 
@@ -353,7 +348,6 @@
   <script src="../assets/js/plugins/parallax.min.js"></script>
   <!-- Control Center for Soft UI Kit: parallax effects, scripts for the example pages etc -->
   <!--  Google Maps Plugin    -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
   <script src="../assets/js/soft-design-system.min.js?v=1.0.9" type="text/javascript"></script>
 
 </body>
