--- a/contact.html
+++ b/contact.html
@@ -73,41 +73,54 @@
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-              <a href="./projet/historique.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Historique</span>
-              </a>
-              <a href="./projet/demarche.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Démarche</span>
-              </a>
-              <a href="./projet/territoire.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Territoire</span>
-              </a>
-              <a href="./projet/equipe.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Équipe</span>
-              </a>
+              <a href="./projet/historique.html" class="dropdown-item border-radius-md"><span class="ps-3">Historique</span></a>
+              <a href="./projet/demarche.html" class="dropdown-item border-radius-md"><span class="ps-3">Démarche</span></a>
+              <a href="./projet/territoire.html" class="dropdown-item border-radius-md"><span class="ps-3">Territoire</span></a>
+              <a href="./projet/equipe.html" class="dropdown-item border-radius-md"><span class="ps-3">Équipe</span></a>
 
             </div><!-- navbar big - d-lg-block -->
 
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
 
-              <a href="./projet/historique.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Historique</span>
-              </a>
-              <a href="./projet/demarche.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Démarche</span>
-              </a>
-              <a href="./projet/territoire.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Territoire</span>
-              </a>
-              <a href="./projet/equipe.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Équipe</span>
-              </a>
+              <a href="./projet/historique.html" class="dropdown-item border-radius-md"><span class="ps-3">Historique</span></a>
+              <a href="./projet/demarche.html" class="dropdown-item border-radius-md"><span class="ps-3">Démarche</span></a>
+              <a href="./projet/territoire.html" class="dropdown-item border-radius-md"><span class="ps-3">Territoire</span></a>
+              <a href="./projet/equipe.html" class="dropdown-item border-radius-md"><span class="ps-3">Équipe</span></a>
 
             </div><!-- navbar small - d-lg-none -->
 
           </div><!-- dropdown-menu -->
         </li><!-- li Projets -->
+
+        <!-- li Pédagogie -->
+        <li class="nav-item dropdown dropdown-hover mx-2">
+          <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" id="dropdownMenuPages" data-bs-toggle="dropdown" aria-expanded="false">
+            Pédagogie
+            <img src="./assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-1">
+          </a>
+          <div class="dropdown-menu dropdown-menu-animation dropdown-md p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuPages">
+
+            <!-- Navbar big size (full screen) -->
+            <div class="d-none d-lg-block">
+
+              <a href="./pedagogie/notions.html" class="dropdown-item border-radius-md"><span class="ps-3">Notions de base</span></a>
+              <a href="./pedagogie/indicateurs.html" class="dropdown-item border-radius-md"><span class="ps-3">Indicateurs</span></a>              
+              <a href="./pedagogie/acoustiquiz.html" class="dropdown-item border-radius-md"><span class="ps-3">AcoustiQUIZ</span></a>
+
+            </div><!-- navbar big - d-lg-block -->
+
+            <!-- Navbar small size (smartphone, tablet) -->
+            <div class="d-lg-none">
+
+              <a href="./pedagogie/notions.html" class="dropdown-item border-radius-md"><span class="ps-3">Notions de base</span></a>
+              <a href="./pedagogie/indicateurs.html" class="dropdown-item border-radius-md"><span class="ps-3">Indicateurs</span></a>              
+              <a href="./pedagogie/acoustiquiz.html" class="dropdown-item border-radius-md"><span class="ps-3">AcoustiQUIZ</span></a>
+
+            </div><!-- navbar small - d-lg-none -->
+
+          </div><!-- dropdown-menu -->
+        </li><!-- li Pédagogie -->
 
         <!-- li Participer -->
         <li class="nav-item dropdown dropdown-hover mx-2">
@@ -120,30 +133,16 @@
             <!-- Navbar big size (full screen) -->
             <div class="d-none d-lg-block">
 
-              <a href="./participer/habitant.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Vous êtes rezéen.ne</span>
-              </a>
-              <a href="./participer/collectivite.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Vous êtes une collectivité</span>
-              </a>
-               <a href="./participer/acoustiquiz.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">AcoustiQUIZ</span>
-              </a>
+              <a href="./participer/habitant.html" class="dropdown-item border-radius-md"><span class="ps-3">Vous êtes rezéen.ne</span></a>
+              <a href="./participer/collectivite.html" class="dropdown-item border-radius-md"><span class="ps-3">Vous êtes une collectivité</span></a>
 
             </div><!-- navbar big - d-lg-block -->
 
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
 
-              <a href="./participer/habitant.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Vous êtes rezéen.ne</span>
-              </a>
-              <a href="./participer/collectivite.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Vous êtes une collectivité</span>
-              </a>
-              <a href="./participer/acoustiquiz.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">AcoustiQUIZ</span>
-              </a>
+              <a href="./participer/habitant.html" class="dropdown-item border-radius-md"><span class="ps-3">Vous êtes rezéen.ne</span></a>
+              <a href="./participer/collectivite.html" class="dropdown-item border-radius-md"><span class="ps-3">Vous êtes une collectivité</span></a>
 
             </div><!-- navbar small - d-lg-none -->
 
@@ -153,45 +152,41 @@
 
         <!-- li Résultats -->
         <li class="nav-item dropdown dropdown-hover mx-2">
-          <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" href="javascript:;" id="dropdownMenuPages" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link ps-2 d-flex center-content-between cursor-pointer align-items-center" id="dropdownMenuPages" data-bs-toggle="dropdown" aria-expanded="false">
             Résultats
             <img src="./assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-1">
           </a>
           <div class="dropdown-menu dropdown-menu-animation dropdown-md p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuPages">
 
             <!-- Navbar big size (full screen) -->
-            <div class="d-none d-lg-block">
+            <div class="d-none d-lg-block" >
+              <h6>&nbsp; &nbsp; SonoRezé I</h6>
+              <a href="./resultats/sonoreze_I/discussion.html" class="dropdown-item border-radius-md">Groupes de discussion</a>
+              <a href="./resultats/sonoreze_I/cartes.html" class="dropdown-item border-radius-md">Cartographies</a>
+              <a href="./resultats/sonoreze_I/portail_interactif.html" class="dropdown-item border-radius-md">Portail interactif</a>
+              <a href="./resultats/sonoreze_I/seminaire.html" class="dropdown-item border-radius-md">Séminaire final</a>
 
-              <a href="./resultats/discussion.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Groupes de discussion</span>
-              </a>
-              <a href="./resultats/cartes.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Cartographies</span>
-              </a>
-              <a href="./resultats/portail_interactif.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Portail interactif</span>
-              </a>
-              <a href="./resultats/publications.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Publications</span>
-              </a>
+              <br><h6>&nbsp; &nbsp; SonoRezé II</h6>
+              <a href="./resultats/sonoreze_II/actions.html" class="dropdown-item border-radius-md">Actions</a>
+              <a href="./resultats/sonoreze_II/portail_carto.html" class="dropdown-item border-radius-md">Portail cartographique</a>
+
+              <a href="./resultats/publications.html" class="dropdown-item border-radius-md"><h6>Publications</h6></a>
 
             </div><!-- navbar big - d-lg-block -->
 
             <!-- Navbar small size (smartphone, tablet) -->
             <div class="d-lg-none">
+              <h6>&nbsp; &nbsp; SonoRezé I</h6>
+              <a href="./resultats/sonoreze_I/discussion.html" class="dropdown-item border-radius-md">Groupes de discussion</a>
+              <a href="./resultats/sonoreze_I/cartes.html" class="dropdown-item border-radius-md">Cartographies</a>
+              <a href="./resultats/sonoreze_I/portail_interactif.html" class="dropdown-item border-radius-md">Portail interactif</a>
+              <a href="./resultats/sonoreze_I/seminaire.html" class="dropdown-item border-radius-md">Séminaire final</a>
 
-              <a href="./resultats/discussion.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Groupes de discussion</span>
-              </a>
-              <a href="./resultats/cartes.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Cartographies</span>
-              </a>
-              <a href="./resultats/portail_interactif.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Portail interactif</span>
-              </a>
-              <a href="./resultats/publications.html" class="dropdown-item border-radius-md">
-                <span class="ps-3">Publications</span>
-              </a>
+              <br><h6>&nbsp; &nbsp; SonoRezé II</h6>
+              <a href="./resultats/sonoreze_II/discussion.html" class="dropdown-item border-radius-md">Actions</a>
+              <a href="./resultats/sonoreze_II/portail_interactif.html" class="dropdown-item border-radius-md">Portail cartographique</a>
+
+              <a href="./resultats/publications.html" class="dropdown-item border-radius-md"><h6>Publications</h6></a>
 
             </div><!-- navbar small - d-lg-none -->
 
@@ -224,37 +219,6 @@
 <!-- End Navbar -->
 
 
-  <!-- -------- START HEADER 8 w/ card over right bg image ------- -->
-  <!--
-  <header>
-    <div class="page-header min-vh-85">
-      <div>
-        <!--<img class="position-absolute fixed-top ms-auto w-50 h-100 z-index-0 d-none d-sm-none d-md-block border-radius-section border-top-end-radius-0 border-top-start-radius-0 border-bottom-end-radius-0" src="./assets/img/contact/tonitorfer_bandeau.jpg" alt="Contact" >
-        <img src="./assets/img/contact/tonitorfer_bandeau.jpg" alt="Oiseau contact - ToniTorfer" width="100%">
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-7 d-flex justify-content-center flex-column">
-            <div class="card d-flex blur justify-content-center p-4 shadow-lg my-sm-0 my-sm-6 mt-8 mb-5">
-              <div class="text-center">
-                <h3 class="text-gradient text-primary">Nous contacter</h3>
-                <p class="mb-0">
-                  Pour toute question ou remarque concernant SonoRezé, n'hésitez pas à nous contacter via le mail suivant :</br></br> <a href="mailto:info@sonoreze.fr?subject=Contact depuis le site SonoRezé"><b>info@sonoreze.fr</b></a>
-                </p>
-                </br>
-                </br>
-                <img src="./assets/img/contact_icon.png" alt="Bulle contact" width="50%">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>-->
-
-
-
-
 
   <section>
     <div class="page-header min-vh-70">
@@ -282,14 +246,6 @@
       </div><!-- container -->
     </div><!-- page-header -->
   </section>
-
-
-
-
-
-
-
-
 
 
 <!---------------------------------------------------------------------------------------->
@@ -324,7 +280,6 @@
   <script src="./assets/js/plugins/parallax.min.js"></script>
   <!-- Control Center for Soft UI Kit: parallax effects, scripts for the example pages etc -->
   <!--  Google Maps Plugin    -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
   <script src="./assets/js/soft-design-system.min.js?v=1.0.9" type="text/javascript"></script>
 </body>
 
