--- a/resultats/sonoreze_II/actions.html
+++ b/resultats/sonoreze_II/actions.html
@@ -282,6 +282,7 @@
         <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
           <div class="container border-bottom">
             <div class="row justify-space-between py-2">
+              <h5 class="text-primary text-gradient">La réunion</h5>
               <p>
                  Le 12 octobre 2023 s'est tenu le premier Atelier public "Diagnostic / actions", qui réunissait des citoyens, des élus et des chercheurs du projet SonoRezé.
                  <br>
@@ -290,15 +291,19 @@
                  <img src="../../assets/img/actions/2023_10_12_participants.jpg" alt="Participants au premier atelier" width="80%">
               <p>   
                  <br>
-                 De manière synthétique, cet atelier a suivit la trame suivante : 
-                 <ul>
-                  <li>1/ tour de table et présentation des attentes de chacun,</li>
-                  <li>2/ exercice "Carte perceptive" ou comment représenter sa ville sous le prisme de la perception du paysage sonore,</li>
-                  <li>3/ définition et débat sur les thématiques d'actions.</li>
-                 </ul>
-                Au terme de cet atelier, les participants ont collégialement acté le fait que la première action devant être travaillée dans le cadre de ce projet devrait concerner les nuisances sonores liées au trafic aérien. 
-                <br>
-                Il a également été convenu que d'autres thématiques (comme le bruit du périphérique, ...) seront traitées ultérieurement.
+                 De manière synthétique, cet atelier a suivit la trame suivante : <br>
+                 &nbsp; 1. tour de table et présentation des attentes de chacun,<br>
+                 &nbsp; 2. exercice "Carte perceptive" ou comment représenter sa ville sous le prisme de la perception du paysage sonore,<br>
+                 &nbsp; 3. définition et débat sur les thématiques d'actions.
+                 <br>
+                 <br>
+              
+                 Au terme de cet atelier, les participants ont collégialement acté le fait que la première action devant être travaillée dans le cadre de ce projet devrait concerner les nuisances sonores liées au trafic aérien. 
+                 <br>
+                 Il a également été convenu que d'autres thématiques (comme le bruit du périphérique, ...) seront traitées ultérieurement.
+                 <br>
+                 <br>
+                 Pour plus de détail, vous êtes invité à lire le <b>compte-rendu</b> disponible ci-dessous.
               </p>
               <a href="https://github.com/Universite-Gustave-Eiffel/sonoreze/tree/gh-pages/assets/data/actions/ATELIER_1_CR_2023_10_12.pdf" target="_blank"><img src="../../assets/img/actions/lire_cr_2023_10_12.png" alt="Lire le compte-rendu" width="80%"></a>
             </div><!-- row -->
@@ -311,23 +316,26 @@
         <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
           <div class="container border-bottom">
             <div class="row justify-space-between py-2">
+              <h5 class="text-primary text-gradient">Protocole expérimental</h5>
               <p>
                  Pour faire suite à cet atelier nous avons décidé d'expérimenter un protocole de mesure des niveaux sonores aériennes à l'aide de l'application NoiseCapture. De manière concrète nous invitons les citoyens à réaliser des mesures depuis chez eux (ou depuis leur travail si c'est également à Rezé) sur une durée assez longue (2h si possible) de manière fixe.
                  <br>
-                 Pour ce faire, rien de plus simple :
-                 <ul>
-                  <li>Activez la localisation (GPS) de votre smartphone,</li>
-                  <li>Placez votre smartphone à l'extérieur, dans un endroit à l'abri (du vent et de la pluie), le micro orienté vers l'extérieur,</li>
-                  <li>Avec NoiseCapture, mesurez aux heures convenues et arrêtez au bout de 2h (ou avant si besoin de votre appareil).</li>
-                 </ul>
-
                  <br>
-                 Les dates et créneaux retenus sont les suivants : 
-                 <ul>
-                  <li><b>Vendredi 03 novembre (06h00-08h00)</b></li>
-                  <li><b>Mardi 07 novembre (18h30-19h30)</b></li>
-                 </ul>
-
+                 Pour ce faire, rien de plus simple :
+                 <br>
+                 &nbsp; 1. Activez la localisation (GPS) de votre smartphone,<br>
+                 &nbsp; 2. Placez votre smartphone à l'extérieur, dans un endroit à l'abri (du vent et de la pluie), le micro orienté vers l'extérieur,<br>
+                 &nbsp; 3. Avec NoiseCapture, mesurez aux heures convenues et arrêtez au bout de 2h (ou avant si besoin de votre appareil).
+                 <br>
+                 <br>
+ 
+                Les dates et créneaux retenus sont les suivants : 
+                 <br>
+                  &nbsp; - <b>Vendredi 03 novembre (06h00-08h00)</b><br>
+                  &nbsp; - <b>Mardi 07 novembre (18h30-19h30)</b>
+                 
+                 <br>
+                 <br>
                  Les mesures ainsi récoltées seront traitées par les chercheurs en acoustique du projet et serviront de base de travail pour le deuxième Atelier prévu le 16 novembre (à 18h30) qui sera consacré à ce sujet.
               </p>
               <br>
