Update indicators and notions

--- a/pedagogie/indicateurs.html
+++ b/pedagogie/indicateurs.html
@@ -298,7 +298,7 @@
         </div>
       </div><!-- col-12 -->
 
-      <!-- T1.1 -->
+      <!-- Limites -->
       <div class="col-12">
         <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
           <div class="container border-bottom">
@@ -315,13 +315,66 @@
         </div>
       </div><!-- col-12 -->
 
+      <!-- LA10, LA50, LA90 -->
+      <div class="col-12">
+        <div class="position-relative border-radius-xl overflow-hidden shadow-lg mb-7">
+          <div class="container border-bottom">
+            <div class="row justify-space-between py-2">
+              <h5 class="text-primary text-gradient">Indicateurs sur la durée de la mesure</h5>
+                
+              <br>
+
+
+<style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;margin:0px auto;}
+.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-baqh{text-align:center;vertical-align:center}
+.tg .tg-k5c1{background-color:#fff3da;text-align:center;vertical-align:center}
+@media screen and (max-width: 767px) {.tg {width: auto !important;}.tg col {width: auto !important;}.tg-wrap {overflow-x: auto;-webkit-overflow-scrolling: touch;margin: auto 0px;}}</style>
+<div class="tg-wrap"><table class="tg">
+<tbody>
+  <tr>
+    <td class="tg-k5c1"><h5 class="text-primary text-gradient">L<sub>A10</sub></h5></td>
+    <td class="tg-baqh">Niveau sonore dépassé 10% du temps par rapport à la durée de mesure T</td>
+  </tr>
+  <tr>
+    <td class="tg-k5c1"><h5 class="text-primary text-gradient">L<sub>A50</sub></h5></td>
+    <td class="tg-baqh">Niveau sonore dépassé 50% du temps par rapport à la durée de mesure T</td>
+  </tr>
+  <tr>
+    <td class="tg-k5c1"><h5 class="text-primary text-gradient">L<sub>A90</sub></h5></td>
+    <td class="tg-baqh">Niveau sonore dépassé 50% du temps par rapport à la durée de mesure T</td>
+  </tr>
+  <tr>
+    <td class="tg-k5c1"><h5 class="text-primary text-gradient">L<sub>A10</sub> - L<sub>A90</sub></h5></td>
+    <td class="tg-baqh">Différence entre les niveaux L<sub>A10</sub> et L<sub>A90</sub> caractérisant la dynamique des niveaux sonores observés pendant la période T</td>
+  </tr>
+</tbody>
+</table></div>
+
+
+              <br>
+
+
+              <div align="center">            
+                <img src="../assets/img/indicateurs/leq_la10_50_90.png" alt="Masquage des dynamiques" width="80%">
+              </div>
+
+            </div><!-- row -->
+          </div><!-- container -->
+        </div>
+      </div><!-- col-12 -->
+
         </div> <!-- row mt-3 -->
       </div><!-- col-lg-9 -->
     </div><!-- row -->
   </div><!-- container -->
 
 
-  <!-- Container Tâche 1 -->
+  <!-- Container LAEQ -->
   <div class="container mt-sm-5 mt-3">
     <div class="row">
       <div class="col-lg-3">
@@ -370,6 +423,14 @@
           </div><!-- container -->
         </div>
       </div><!-- col-12 -->
+
+        </div> <!-- row mt-3 -->
+      </div><!-- col-lg-9 -->
+    </div><!-- row -->
+  </div><!-- container -->
+
+
+
 
 
 
