--- a/pedagogie/indicateurs.html
+++ b/pedagogie/indicateurs.html
@@ -346,7 +346,7 @@
   </tr>
   <tr>
     <td class="tg-k5c1"><h5 class="text-primary text-gradient">L<sub>A90</sub></h5></td>
-    <td class="tg-baqh">Niveau sonore dépassé 50% du temps par rapport à la durée de mesure T</td>
+    <td class="tg-baqh">Niveau sonore dépassé 90% du temps par rapport à la durée de mesure T</td>
   </tr>
   <tr>
     <td class="tg-k5c1"><h5 class="text-primary text-gradient">L<sub>A10</sub> - L<sub>A90</sub></h5></td>
@@ -394,12 +394,10 @@
             <div class="row justify-space-between py-2">
                 <h5 class="text-primary text-gradient">Les périodes réglementaires</h5>
                 <p>
-                La directive européenne <a href="https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:32002L0049" target="_blank">2002/49/CE</a> portant sur "l’évaluation et la gestion du bruit ambiant" spécifie que le jour dure 12 heures, la soirée 4 heures et la nuit 8 heures. Dans ce contexte, la réglementation française indique que les niveaux équivalents, tels que le L<sub>Aeq</sub>, doivent être basés sur les trois périodes horaires listées ci-dessous :
-                <ul>
-                  <li>06-18h : L<sub>Aeq</sub> pendant le <b>jour</b> (L<sub>day</sub> en anglais)</li>
-                  <li>18-22h : L<sub>Aeq</sub> en <b>soirée</b> (L<sub>evening</sub> en anglais)</li>
-                  <li>22-06h : L<sub>Aeq</sub> pendant la <b>nuit</b> (L<sub>night</sub> en anglais)</li>
-                </ul>  
+                La directive européenne <a href="https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:32002L0049" target="_blank">2002/49/CE</a> portant sur "l’évaluation et la gestion du bruit ambiant" spécifie que le jour dure 12 heures, la soirée 4 heures et la nuit 8 heures. Dans ce contexte, la réglementation française indique que les niveaux équivalents, tels que le L<sub>Aeq</sub>, doivent être basés sur les trois périodes horaires listées ci-dessous :<br>
+                - 06-18h : L<sub>Aeq</sub> pendant le <b>jour</b> (L<sub>day</sub> en anglais)<br>
+                - 18-22h : L<sub>Aeq</sub> en <b>soirée</b> (L<sub>evening</sub> en anglais)<br>
+                - 22-06h : L<sub>Aeq</sub> pendant la <b>nuit</b> (L<sub>night</sub> en anglais)<br>
                 </p>
                 <h5 class="text-primary text-gradient">L'indicateur global : L<sub>DEN</sub></h5>
                 <p>Le L<sub>DEN</sub> correspond au niveau équivalent (L<sub>Aeq</sub>) calculé sur une période de 24h. Ici "DEN" signifie "Day-Evening-Night" <i>("Jour-Soir-Nuit" en français)</i>, soit les 3 périodes réglementaires citées précédemment.<br><br>
